Changed Typing error
Cost of Grandma to Cost of Factory

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <li>Speed of Baker - 1 cookie in 5sec</li>
                     </ul>
                 </li>
-                <li>Cost of Grandma - 500 cookies
+                <li>Cost of Factory - 500 cookies
                     <ul>
                         <li>Speed of Factory - 1 cookie in 1sec</li>
                     </ul>
